<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_info_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/input_find_city_weather_padding"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_find_city_weather"
                style="@style/SearchViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_find_city_weather_margin_start"
                android:layout_marginTop="@dimen/input_find_city_weather_margin_top"
                android:layout_marginEnd="@dimen/input_find_city_weather_margin_end"
                android:hint="@string/search_city_weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_label_search_for_city"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_label_search_for_city_mmargin_top"
        android:text="@string/search_for_a_city"
        android:textSize="@dimen/text_label_search_for_city_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <ImageView
        android:id="@+id/image_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_city_height"
        android:layout_marginTop="@dimen/image_city_margin_top"
        android:scaleType="centerCrop"
        android:src="@drawable/city_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_search_for_city" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_showing_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/constraint_layout_showing_temp_padding"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_searched_city_temperature"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_view_searched_city_temperature_height"
                android:fadeScrollbars="false"
                android:scrollbars="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_weather_symbol"
                android:layout_width="@dimen/image_weather_symbol_width"
                android:layout_height="@dimen/image_weather_symbol_height"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sunny"
                app:layout_constraintBottom_toBottomOf="@+id/text_todays_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_label_today" />

            <TextView
                android:id="@+id/text_label_today"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_label_today_margin_start"
                android:layout_marginTop="@dimen/text_label_today_mmargin_top"
                android:text="@string/today"
                android:textSize="@dimen/text_label_today_text_size"
                app:layout_constraintStart_toEndOf="@+id/image_weather_symbol"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_searched_city_temperature" />

            <TextView
                android:id="@+id/text_todays_date"
                style="@style/TextViewNormalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_todays_date_margin_top"
                android:textSize="@dimen/text_todays_date_text_size"
                app:layout_constraintStart_toStartOf="@+id/text_label_today"
                app:layout_constraintTop_toBottomOf="@+id/text_label_today"
                tools:text="Fri, 7 Sep" />

            <TextView
                android:id="@+id/weather_description"
                style="@style/TextViewNormalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/weather_description_margin_top"
                android:textSize="@dimen/weather_description_text_size"
                app:layout_constraintStart_toStartOf="@+id/text_todays_date"
                app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
                tools:text="Partly Cloudy" />

            <TextView
                android:id="@+id/wind_info"
                style="@style/TextViewNormalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wind_info_margin_top"
                android:textSize="@dimen/wind_info_text_size"
                app:layout_constraintStart_toStartOf="@+id/weather_description"
                app:layout_constraintTop_toBottomOf="@+id/weather_description"
                tools:text="Wind: 13 km/h" />

            <TextView
                android:id="@+id/text_temperature"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_temperature_margin_top"
                android:textSize="@dimen/text_temperature_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
                tools:text="28" />

            <TextView
                android:id="@+id/text_label_degree"
                style="@style/TextViewBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_label_degree_margin_top"
                android:text="@string/text_label_degree"
                android:textSize="@dimen/text_label_degree_text_size"
                app:layout_constraintStart_toEndOf="@+id/text_temperature"
                app:layout_constraintTop_toTopOf="@+id/text_temperature" />

            <TextView
                android:id="@+id/text_city_name"
                style="@style/TextViewBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_city_name_margin_top"
                android:textSize="@dimen/text_city_name_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_temperature"
                tools:text="Ajmer, Rajasthan" />

            <ImageView
                android:id="@+id/user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_info_margin_top"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toTopOf="@+id/image_weather_human_reaction"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_city_name"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/image_weather_human_reaction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_weather_human_reaction_height"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_city_name"
                tools:srcCompat="@drawable/sunny_day" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>